// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match played to a decision > reaches a winner and matches the recorded outcome 1`] = `
{
  "matchWinner": 1,
  "p1": {
    "hp": 0,
    "state": "KO",
    "x": 528.7381,
  },
  "p2": {
    "hp": 35.1507,
    "state": "VICTORY",
    "x": 701.7463,
  },
  "phase": "ending",
  "round": 2,
  "roundWins": [
    0,
    2,
  ],
  "tick": 2724,
}
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 1`] = `
[
  "t150:cdaf0a9d",
  "t300:5bf883ef",
  "t450:56de59b6",
  "t600:2d34265",
  "t750:9d1dd436",
  "t900:83719738",
]
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 66.4192,
    "state": "HEAVY_ATTACK",
    "x": 529.0595,
  },
  "p2": {
    "hp": 100,
    "state": "BLOCKSTUN",
    "x": 722.77,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`projectile and zone characters > matches the recorded checksum trail 1`] = `
[
  "t120:c6e52280",
  "t240:fcaa4e8d",
  "t360:2d7776b3",
  "t480:ff4d84a5",
  "t600:63b390de",
  "t720:fd667599",
  "t840:7240c49e",
]
`;

exports[`two-player scripted match > matches the recorded checksum trail 1`] = `
[
  "t120:9088b6ce",
  "t240:c77ccaf1",
  "t360:c88362bd",
  "t480:ded758cb",
  "t600:5cc749ab",
  "t720:f35fcbcb",
  "t840:a1eddeef",
  "t960:104559da",
  "t1080:8ec50d6a",
  "t1200:5de49fdd",
]
`;

exports[`two-player scripted match > matches the recorded final state 1`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 14.9986,
    "state": "LIGHT_ATTACK",
    "x": 160.9074,
  },
  "p2": {
    "hp": 100,
    "state": "ULTIMATE",
    "x": 765.0625,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 1200,
}
`;
